# agreement-generation

./: .gitignore  README.md  package.json
backend/: .env.sample  .gitignore  Makefile  README.md  config.py  constants.py  doc-agent.py  doc_agent.py  event-api.py  main.py  markdown2.py  markdown3.py  prompts.py  pyproject.toml  req.txt  templates.py
backend/api/: event-api.py
backend/api/routes/: agreement.py  approval.py  contact_us.py  user.py  validation.py  websocket.py
backend/auth/: clerk_auth.py
backend/database/: connection.py
backend/helpers/: agreement_generator_helper.py  db_operations.py  email_helper.py  image_validation.py  rent_agreement_generator.py  state_manager.py  template_based_agreement_generator.py  thread_executer.py  websocket_helper.py
backend/models/: rental_agreement.py
backend/prisma/: schema.prisma
backend/prisma/migrations/20250224115024_init/: migration.sql
backend/prisma/migrations/20250304052528_init/: migration.sql
backend/prisma/migrations/20250304123157_init/: migration.sql
backend/services/: contact_us.py  doc_agent.py  email_verification.py  image_sign_upload.py  template_doc_agent.py
front/: .env.sample  README.md  index.html  package.json  vite.config.ts
front/pages/: HomePage.tsx
front/src/: App.tsx  Router.tsx  colors.ts  constants.ts  index.css  main.tsx  types.ts
front/src/components/: AddressForm.tsx  AppLayout.tsx  FurnitureAppliances.tsx  OTPInput.tsx  OTPTimer.tsx  ResponseCard.tsx  TemplateUpload.tsx
front/src/hooks/: useAgreements.ts  useAgreements.tsx  useApi.ts  useAprrovalApi.ts  useUserState.tsx  (+1 more)
(+34 files in other folders)
