[tool.poetry]
name = "agreement-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "../backend" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
g4f = "0.4.7.7"
langchain = "^0.3.19"
langgraph = "^0.2.74"
pypandoc = "^1.15"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
websockets = "^15.0"
openai = "^1.64.0"
prisma = "^0.15.0"
email-validator = "^2.2.0"
pillow = "^11.1.0"
langchain-openai = "^0.3.7"
python-jose = "^3.4.0"
curl-cffi = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
